Provider page extra padding on the right for tablet and mobile devices fix

--- a/themes/gv_sky/css/sass/_parts_compare/chart-vertical.sass
+++ b/themes/gv_sky/css/sass/_parts_compare/chart-vertical.sass
@@ -161,6 +161,9 @@
 							color: $yellow
 							z-index: -1
 
+						.mobile &:before
+							top: 3px
+
 
 
 	&-tbody
