--- a/themes/gv_sky/css/sass/_parts_provider/provider-box.sass
+++ b/themes/gv_sky/css/sass/_parts_provider/provider-box.sass
@@ -240,6 +240,7 @@
 
 			+m(920)
 				position: absolute
+				right: 40px
 				width: 100%
 				height: auto
 
@@ -282,12 +283,13 @@
 
 				+m(920)
 					top: 0
-					right: 70px
+					// right: 70px
+					right: 0
 					left: auto
 
 					+m(480)
 						right: auto
-						left: 0
+						left: 50px
 
 				&-caption
 					text-align: center
